--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Chinese Women Diaspora</title>
+  <title>Archive of Sino Women in Diaspora</title>
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // MIT License
